Overflow fixed.

--- a/client/src/Chat.module.css
+++ b/client/src/Chat.module.css
@@ -29,6 +29,7 @@
   height: 80%;
   font-size: 5rem;
   color: white;
+  overflow: auto;
 }
 
 .send_message {
